fix yelp for when too many buttons and wrapping the line

--- a/css/styles.css
+++ b/css/styles.css
@@ -301,8 +301,12 @@ table.buyBox .wishlist td.bottomLeft {
 
 /* YELP */
 
+.ybtn {
+  margin-bottom: 5px !important;
+}
+
 #addToWunderlistButton.injected-yelp {
-  margin: 2px 0 0 4px !important;
+  margin: 2px 0 5px 4px !important;
 }
 
 #addToWunderlistButton.injected-yelp .wunderlist-icon {
